...
         return view
     }()

    var showButton : UIButton = {
        let bt = UIButton()
        bt.backgroundColor = .darkGray
        bt.setTitle("View Album!", for: UIControl.State.normal)
        bt.layer.cornerRadius = bt.frame.size.width / 2;
        bt.clipsToBounds = true;
          return bt
      }()
    
    //Stack View and its content
...
